--- a/PsuAccSystem/Forms/ViewOrder.xaml
+++ b/PsuAccSystem/Forms/ViewOrder.xaml
@@ -50,132 +50,61 @@
             </Menu>
         </Grid>
 
-        <ListView Grid.Row="1"
+        <DataGrid Grid.Row="1"
                   ItemsSource="{Binding Orders}"
                   Margin="0, 20, 0, 0"
                   Background="#EEEEEE"
                   SelectionMode="Single"
-                  Foreground="Black">
-            <ListView.Resources>
+                  Foreground="Black"
+                  AutoGenerateColumns="False"
+                  IsReadOnly="True">
+            <DataGrid.Resources>
                 <Color x:Key="SelectedBackgroundColor">#91A1A1</Color>
                 <Color x:Key="SelectedUnfocusedColor">#91A1A1</Color>
-            </ListView.Resources>
-            
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Background" Value="Black"/>
-                    <Setter Property="Margin" Value="0"/>
+            </DataGrid.Resources>
 
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="BurlyWood"/>
 
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="ListViewItem">
-                                
-                                
-                                
-                                <Border x:Name="Border"
-                                        Padding="2"
-                                        SnapsToDevicePixels="true"
-                                        Background="Transparent">       
-                                    <VisualStateManager.VisualStateGroups>
-                                        <VisualStateGroup x:Name="CommonStates">
-                                            <VisualState x:Name="Normal" />
-                                            <VisualState x:Name="MouseOver" />
-                                            <VisualState x:Name="Disabled" />
-                                        </VisualStateGroup>
-                                        <VisualStateGroup x:Name="SelectionStates">
-                                            <VisualState x:Name="Unselected" />
-                                            <VisualState x:Name="Selected">
-                                                <Storyboard>
-                                                    <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
-                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-                                                        <EasingColorKeyFrame KeyTime="0"
-                                                    Value="{StaticResource SelectedBackgroundColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                            <VisualState x:Name="SelectedUnfocused">
-                                                <Storyboard>
-                                                    <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
-                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-                                                        <EasingColorKeyFrame KeyTime="0"
-                                         Value="{StaticResource SelectedUnfocusedColor}" />
-                                                    </ColorAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-                                    <GridViewRowPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                </Border>
-
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter TargetName="Border" Property="Background">
-                                            <Setter.Value>
-                                                <SolidColorBrush Color="{DynamicResource DisabledBorderLightColor}" />
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Trigger> 
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="Border" Property="Background">
-                                            <Setter.Value>
-                                                <SolidColorBrush Color="{DynamicResource SelectedUnfocusedColor}" />
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-
-
-
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.View>
-                <GridView>
-                    <GridView.ColumnHeaderContainerStyle>
-                        <Style TargetType="{x:Type GridViewColumnHeader}">
-                            <Setter Property="Template">
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background">
                                 <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                                        <Border BorderThickness="0,0,0,1" 
-                                                Background="{DynamicResource DarkGray}"
-                                                CornerRadius="0">
-                                            <TextBlock x:Name="ContentHeader" 
-                                                       Text="{TemplateBinding Content}" 
-                                                       Padding="5,5,5,5" 
-                                                       Width="{TemplateBinding Width}" 
-                                                       TextAlignment="Center" 
-                                                       Foreground="White"/>
-                                        </Border>
-                                    </ControlTemplate>
+                                    <SolidColorBrush Color="{DynamicResource DisabledBorderLightColor}" />
                                 </Setter.Value>
                             </Setter>
-                        </Style>
-                    </GridView.ColumnHeaderContainerStyle>
-
-                    <GridViewColumn DisplayMemberBinding="{Binding Id}"
-                                    Header=" № "/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Service}"
-                                    Header=" Услуга "
-                                    />
-                    <GridViewColumn DisplayMemberBinding="{Binding Customer}"
-                                    Header=" Клиент "
-                                    />
-                    <GridViewColumn DisplayMemberBinding="{Binding Worker}"
-                                    Header=" Ответственный "
-                                    />
-                    <GridViewColumn DisplayMemberBinding="{Binding Date}"
-                                    Header=" Дата "
-                                    />
-                    <GridViewColumn DisplayMemberBinding="{Binding Time}"
-                                    Header=" Время "
-                                    />
-                </GridView>
-            </ListView.View>
-        </ListView>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="{DynamicResource SelectedUnfocusedColor}" />
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
+            
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="№" 
+                                    Binding="{Binding Id}" />
+                <DataGridTextColumn Header="Услуга" 
+                                    Binding="{Binding Service}"
+                                    Width="90" />
+                <DataGridTextColumn Header="Клиент" 
+                                    Binding="{Binding Customer}"
+                                    Width="90" />
+                <DataGridTextColumn Header="Ответственный" 
+                                    Binding="{Binding Worker}" />
+                <DataGridTextColumn Header="Дата" 
+                                    Binding="{Binding Date}"
+                                    Width="90" />
+                <DataGridTextColumn Header="Время" 
+                                    Binding="{Binding Time}"
+                                    Width="90" />
+            </DataGrid.Columns>
+        </DataGrid>
 
         <StackPanel Orientation="Horizontal"
                     Grid.Row="2"
