--- a/PsuAccSystem/Styles/Styles.xaml
+++ b/PsuAccSystem/Styles/Styles.xaml
@@ -6,10 +6,10 @@
         <Setter Property="FontFamily" Value="Verdana"/>
     </Style>
     
-    <Style TargetType="Border">
+    <!--<Style TargetType="Border">
         <Setter Property="CornerRadius" Value="10"/>
         <Setter Property="BorderThickness" Value="0"/>
-    </Style>
+    </Style>-->
 
     <Style x:Key="AuthTextBox" TargetType="TextBox">
         <Setter Property="Height" Value="24"/>
@@ -23,6 +23,7 @@
         <Setter Property="Height" Value="34"/>
         <Setter Property="Background" Value="#DF2626"/>
         <Setter Property="Foreground" Value="White"/>
+
     </Style>
 
     <Style x:Key="GridStyle" TargetType="Grid">
@@ -40,17 +41,12 @@
     <SolidColorBrush x:Key="LightGray" Color="#91A1A1"/>
     <SolidColorBrush x:Key="TooLightGray" Color="#EEEEEE"/>
 
-    <Style x:Key="AddButton" TargetType="Button">
-        <Setter Property="Width" Value="190"/>
-        <Setter Property="Background" Value="#DF2626"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="30"/>
-        <Setter Property="Content" Value="+"/>
-
+    <Style TargetType="Button">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}">
+                    <Border Background="{TemplateBinding Background}"
+                            CornerRadius="10">
                         <ContentPresenter Focusable="False" 
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
                                           Margin="{TemplateBinding Padding}"
@@ -61,6 +57,15 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="AddButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+        <Setter Property="Width" Value="190"/>
+        <Setter Property="Background" Value="#DF2626"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="30"/>
+        <Setter Property="Content" Value="+"/>
+        
         <Style.Triggers>
             <Trigger Property="Button.IsMouseOver" Value="true">
                 <Setter Property="Background" Value="{StaticResource LightGray}"/>
