--- a/PsuAccSystem/Forms/Pages/ViewOrderPage.xaml
+++ b/PsuAccSystem/Forms/Pages/ViewOrderPage.xaml
@@ -1,57 +1,22 @@
-﻿<Window x:Class="PsuAccSystem.Forms.ViewOrder"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PsuAccSystem.Forms"
-        mc:Ignorable="d"
-        Title="Система учета заказов Интернет-Центра ПГНИУ" 
-        Height="503" 
-        Width="727">
-    <Grid Style="{StaticResource GridStyle}">
+﻿<Page x:Class="PsuAccSystem.Forms.Pages.ViewOrderPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:PsuAccSystem.Forms.Pages"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="Просмотр всех заказов">
+
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         
-        <Grid Grid.Row="0"
-              Background="#FFF0F0F0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
-            
-            <Menu Grid.Column="0"
-                  VerticalAlignment="Center">
-                <MenuItem Header="Контроль">
-                    <MenuItem Header="Оплата за Интернет" />
-                    <MenuItem Header="Управление рассылкой на почту"/>
-                </MenuItem>
-                <MenuItem Header="Анализ" ></MenuItem>
-                <MenuItem Header="Отчет" ></MenuItem>
-                <MenuItem Header="Помощь" ></MenuItem>
-                <MenuItem Header="⟳" FontSize="16" ToolTip="Обновить таблицу"></MenuItem>
-            </Menu>
-
-            <Menu Grid.Column="2"
-                  VerticalAlignment="Center">
-                <MenuItem>
-                    <MenuItem.Header>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="🔍 "/>
-                            <TextBox Width="150"
-                                     ToolTip="Поиск по заказам"/>
-                        </StackPanel>
-                    </MenuItem.Header>
-                </MenuItem>
-            </Menu>
-        </Grid>
-
-        <DataGrid Grid.Row="1"
+        <DataGrid Grid.Row="0"
                   ItemsSource="{Binding Orders}"
+                  SelectedItem="{Binding SelectedOrder}"
                   Margin="0, 20, 0, 0"
                   Background="#EEEEEE"
                   SelectionMode="Single"
@@ -100,10 +65,15 @@
                 <DataGridTextColumn Header="Время" 
                                     Binding="{Binding Time}"/>
             </DataGrid.Columns>
+
+            <DataGrid.InputBindings>
+                <MouseBinding Gesture="LeftDoubleClick"
+                              Command="{Binding ChangeOrderCommand}"/>
+            </DataGrid.InputBindings>
         </DataGrid>
 
         <StackPanel Orientation="Horizontal"
-                    Grid.Row="2"
+                    Grid.Row="1"
                     Margin="10, 10, 0, 0">
             <Border Background="#A7B4B4"
                     Padding="10"
@@ -137,13 +107,7 @@
                     Style="{StaticResource AddButton}"
                     BorderThickness="0"
                     ToolTip="Добавить новый заказ"
-                    Click="AddOrder"/>
+                    Command="{Binding AddOrderCommand}"/>
         </StackPanel>
-        <Button Content="Выйти"
-                Style="{StaticResource GrayButton}"
-                Grid.Row="3"
-                HorizontalAlignment="Right"
-                ToolTip="Выход из учетной записи"
-                Click="Exit"/>
     </Grid>
-</Window>
+</Page>
