--- a/PsuAccSystem/UserControls/PrintServiceControl.xaml
+++ b/PsuAccSystem/UserControls/PrintServiceControl.xaml
@@ -7,14 +7,41 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Height="50"
-          Width="130">
-        <GroupBox Header="Количество страниц">
-            <StackPanel Orientation="Horizontal">
-                <TextBox Text="{Binding PageCount}"
-                         Width="90"/>
-                <TextBlock Text="шт."
-                           Margin="5,0,0,0"/>
-            </StackPanel>
-        </GroupBox>
+          HorizontalAlignment="Center">
+        <StackPanel Orientation="Horizontal">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Количество страниц"/>
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="1">
+                    <TextBox Text="{Binding PageCount}"
+                     Width="150"
+                     Height="20"/>
+                    <TextBlock Text="шт."
+                       Margin="5,0,0,0"
+                           VerticalAlignment="Center"/>
+                </StackPanel>
+            </Grid>
+            <Grid Margin="20,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Общая стоимость"/>
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="1">
+                    <TextBox Text="{Binding FinallyCost}"
+                             IsReadOnly="True"
+                             Width="150"
+                             Height="20"/>
+                    <TextBlock Text="руб."
+                             Margin="5,0,0,0"
+                             VerticalAlignment="Center"/>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
     </Grid>
 </UserControl>
