--- a/PsuAccSystem/Forms/Pages/ClientsTablePage.xaml
+++ b/PsuAccSystem/Forms/Pages/ClientsTablePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="PsuAccSystem.Forms.Pages.ViewOrderPage"
+﻿<Page x:Class="PsuAccSystem.Forms.Pages.ClientsTablePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,17 +6,17 @@
       xmlns:local="clr-namespace:PsuAccSystem.Forms.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Просмотр всех заказов">
+      Title="Информация о клиентах">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        
+
         <DataGrid Grid.Row="0"
-                  ItemsSource="{Binding Orders}"
-                  SelectedItem="{Binding SelectedOrder}"
+                  ItemsSource="{Binding Clients}"
+                  SelectedItem="{Binding SelectedClient}"
                   Margin="0, 20, 0, 0"
                   Background="#EEEEEE"
                   SelectionMode="Single"
@@ -54,14 +54,12 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="№" 
                                     Binding="{Binding Id}" />
-                <DataGridTextColumn Header="Услуга" 
-                                    Binding="{Binding Service}"/>
                 <DataGridTextColumn Header="Клиент" 
-                                    Binding="{Binding Customer.FIO}"/>
-                <DataGridTextColumn Header="Ответственный" 
-                                    Binding="{Binding Worker}" />
-                <DataGridTextColumn Header="Дата" 
-                                    Binding="{Binding Date}"/>
+                                    Binding="{Binding FIO}"/>
+                <DataGridTextColumn Header="Почта" 
+                                    Binding="{Binding Email}"/>
+                <DataGridTextColumn Header="Телфон" 
+                                    Binding="{Binding PhoneNumber}" />
             </DataGrid.Columns>
 
             <DataGrid.InputBindings>
@@ -72,40 +70,21 @@
 
         <StackPanel Orientation="Horizontal"
                     Grid.Row="1"
-                    Margin="10, 10, 0, 0">
-            <Border Background="#A7B4B4"
-                    Padding="10"
-                    CornerRadius="10">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Text="Отобразить заказы"
-                               HorizontalAlignment="Center"
-                               Grid.Row="0"
-                               Foreground="White"
-                               FontWeight="Bold"/>
-                    <StackPanel Grid.Row="1"
-                            Orientation="Horizontal">
-                        <TextBlock Text="c:"
-                                   Foreground="White"
-                                   FontWeight="Bold"/>
-                        <DatePicker BorderThickness="0"/>
-                        <TextBlock Text="по:"
-                                   Foreground="White"
-                                   FontWeight="Bold"/>
-                        <DatePicker BorderThickness="0"/>
-                    </StackPanel>
-                </Grid>
-            </Border>
+                    Margin="10, 10, 0, 0"
+                    HorizontalAlignment="Center">
 
             <Button Margin="20, 0, 0, 0"
                     Style="{StaticResource AddButton}"
                     BorderThickness="0"
-                    ToolTip="Добавить новый заказ"
+                    ToolTip="Добавить нового клиента"
                     Command="{Binding AddOrderCommand}"/>
+            <Button Content="🗑"
+                    Margin="20, 0, 0, 0"
+                    Style="{StaticResource AddButton}"
+                    BorderThickness="0"
+                    ToolTip="Удалить данные о клиенте"
+                    Command="{Binding AddOrderCommand}"
+                    Background="{StaticResource Orange}"/>
         </StackPanel>
     </Grid>
 </Page>
