--- a/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
+++ b/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
@@ -6,18 +6,47 @@
              xmlns:local="clr-namespace:PsuAccSystem.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <StackPanel>
-            <GroupBox Header="Тариф" Height="50"
-                      Width="300">
-                <ComboBox ItemsSource="{Binding Tarifs}"
-                          SelectedItem="{Binding Tarif}"
-                          DisplayMemberPath="Name"/>
-            </GroupBox>
-            <GroupBox Header="Цена" Height="50"
-                      Width="300">
-                <TextBlock Text="{Binding Tarif.Cost}"/>
-            </GroupBox>
+    <Grid Height="80"
+          HorizontalAlignment="Center">
+        <StackPanel Orientation="Horizontal">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Тариф"
+                       Width="150"
+                       HorizontalAlignment="Left"/>
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="1">
+                    <ComboBox ItemsSource="{Binding Tarifs}"
+                              SelectedItem="{Binding Tarif}"
+                              DisplayMemberPath="Name"
+                              Width="200"
+                              Height="25"
+                              VerticalContentAlignment="Center"/>
+                </StackPanel>
+            </Grid>
+            <Grid Margin="20,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Стоимость"
+                       Width="150"
+                       HorizontalAlignment="Left"/>
+                <StackPanel Orientation="Horizontal"
+                            Grid.Row="1">
+                    <TextBox Text="{Binding Tarif.Cost}"
+                             IsReadOnly="True"
+                             Width="200"
+                             Height="25"
+                             VerticalContentAlignment="Center"/>
+                    <TextBlock Text="руб."
+                             Margin="5,0,0,0"
+                             VerticalAlignment="Center"/>
+                </StackPanel>
+            </Grid>
         </StackPanel>
     </Grid>
 </UserControl>
