--- a/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
+++ b/PsuAccSystem/UserControls/InternetPayServiceControl.xaml
@@ -6,8 +6,12 @@
              xmlns:local="clr-namespace:PsuAccSystem.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Height="80"
+    <Grid Height="150"
           HorizontalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal">
             <Grid>
                 <Grid.RowDefinitions>
@@ -17,15 +21,13 @@
                 <Label Content="Тариф"
                        Width="150"
                        HorizontalAlignment="Left"/>
-                <StackPanel Orientation="Horizontal"
-                        Grid.Row="1">
-                    <ComboBox ItemsSource="{Binding Tarifs}"
-                              SelectedItem="{Binding Tarif}"
-                              DisplayMemberPath="Name"
-                              Width="200"
-                              Height="25"
-                              VerticalContentAlignment="Center"/>
-                </StackPanel>
+                <ComboBox ItemsSource="{Binding Tarifs}"
+                          SelectedItem="{Binding Tarif}"
+                          DisplayMemberPath="Name"
+                          Width="200"
+                          Height="25"
+                          VerticalContentAlignment="Center"
+                          Grid.Row="1"/>
             </Grid>
             <Grid Margin="20,0,0,0">
                 <Grid.RowDefinitions>
@@ -48,5 +50,25 @@
                 </StackPanel>
             </Grid>
         </StackPanel>
+        <Grid Grid.Row="1"
+              Margin="0,15,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Клиент"
+                       Width="150"
+                       HorizontalAlignment="Left"/>
+            <ComboBox ItemsSource="{Binding Clients}"
+                          SelectedItem="{Binding Client}"
+                          DisplayMemberPath="FIO"
+                          Width="430"
+                          Height="25"
+                          VerticalContentAlignment="Center"
+                          HorizontalAlignment="Left"
+                          VerticalAlignment="Top"
+                          Grid.Row="1"
+                          Margin="0,5,0,0"/>
+        </Grid>
     </Grid>
 </UserControl>
